[gd_scene load_steps=4 format=3 uid="uid://8ug7o6u0bmuv"]

[ext_resource type="Script" path="res://building/tower_enemy_detector.gd" id="1_0kkrk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7lsbk"]
size = Vector2(48, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7dhy5"]
size = Vector2(16, 16)

[node name="TowerEnemyDetectorComponent" type="Area2D"]
process_mode = 3
script = ExtResource("1_0kkrk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_7lsbk")

[node name="MouseDetector" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseDetector"]
shape = SubResource("RectangleShape2D_7dhy5")

[connection signal="area_shape_entered" from="." to="." method="_on_area_shape_entered"]
[connection signal="area_shape_exited" from="." to="." method="_on_area_shape_exited"]
[connection signal="mouse_shape_entered" from="MouseDetector" to="." method="_on_mouse_shape_entered"]
[connection signal="mouse_shape_exited" from="MouseDetector" to="." method="_on_mouse_shape_exited"]
